--- a/Data Structures/DS14/Project3 (Kruskal)/Project3 (Kruskal).vcxproj
+++ b/Data Structures/DS14/Project3 (Kruskal)/Project3 (Kruskal).vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{49e27897-710a-4dd8-adba-d9bf85cfc7fa}</ProjectGuid>
-    <RootNamespace>Project2GraphDFS</RootNamespace>
+    <ProjectGuid>{588dfcf5-4025-4225-944b-5ee0018e94ca}</ProjectGuid>
+    <RootNamespace>Project3Kruskal</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,15 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ArrayBaseStack.cpp" />
-    <ClCompile Include="Graph.cpp" />
-    <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="소스.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="ArrayBaseStack.h" />
-    <ClInclude Include="Graph.h" />
-    <ClInclude Include="LinkedList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
