--- a/Windows_Programming/Character_Sets/MBCS_Test/MBCS_Test.vcxproj
+++ b/Windows_Programming/Character_Sets/MBCS_Test/MBCS_Test.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bf132d2b-17ff-4b9c-b274-e8ead2f1975d}</ProjectGuid>
-    <RootNamespace>MBCS</RootNamespace>
+    <ProjectGuid>{e0299739-031a-49f8-8df9-1a2fb02d7bd2}</ProjectGuid>
+    <RootNamespace>MBCSTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
